--- a/smart-city/build.gradle
+++ b/smart-city/build.gradle
@@ -34,4 +34,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:20.0.0'
+    compile 'com.google.android.gms:play-services:6.1.11'
 }
