--- a/smart-city/build.gradle
+++ b/smart-city/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:20.0.0'
     compile 'com.google.android.gms:play-services:6.1.11'
+    compile 'com.koushikdutta.ion:ion:1.+'
 }
